@@ -1,5 +1,11 @@
 2004-08-03  Sam Steingold  <sds@gnu.org>
 
+	* modules/berkeley-db/bdb.c (CLOSE_ERRFILE): new macro
+	(RESET_ERRFILE): use it
+	(BDB:DBE-CLOSE, BDB:DB-CLOSE): close errfile
+
+2004-08-03  Sam Steingold  <sds@gnu.org>
+
 	* genclisph.d (number_immediatep): export
 	(positivep): use it
 
